[project]
name = "r567tw_pypl"
version = "0.0.1"
authors = [
  { name="r567tw", email="r567tw@gmail.com" },
]
description = "example package for practice"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/r567tw/r567tw-pypl-package"
"Bug Tracker" = "https://github.com/r567tw/r567tw-pypl-package/issues"
